--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^20.3.0",
+    "@react-native-firebase/firestore": "^20.3.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.24",
+    "expo-firebase-core": "^6.0.0",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.4",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.33.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
